# Hackathon-Zapier

./: app.py  bot.py  browser_mcp.json  channels.yaml  config.py  errors.yaml  main.py  pyproject.toml  requirements.txt  resources.yaml  teams.yaml  test_confluence_search.py
app/core/: logging_config.py  security.py
app/integrations/confluence/: client.py
app/integrations/routers/: slack_commands.py  slack_events.py
app/integrations/slack/: client.py
app/routers/: slack_commands.py
app/services/: summarizer.py
